--- a/src/styles/UIReturns.scss
+++ b/src/styles/UIReturns.scss
@@ -1,2 +1,94 @@
-﻿.error {
- background: #f0f;}
+.loading,
+.error {
+  position: absolute;
+  height: 100%;
+  background: #60338e;
+  opacity: 0.9;
+  width: 100%;
+  z-index: 1000;
+  top:0;
+}
+
+.loading__txt,
+.error__txt {
+  font-size: 2em;
+  text-align: center;
+  color: #f3ef03;
+  position: relative;
+  top: 25vh;
+}
+
+.loading__animation, .loading__animation:before, .loading__animation:after {
+    border-radius: 50%;
+}
+
+/*Créditos da animação do loading https://projects.lukehaas.me/css-loaders/*/
+
+.loading__animation {
+    color: #f3ef03;
+    font-size: 11px;
+    text-indent: -99999em;
+    margin: 0 auto;
+    display: block;
+    width: 10em;
+    height: 10em;
+    box-shadow: inset 0 0 0 1em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: contents;
+}
+
+.loading__animation:before, .loading__animation:after {
+    position: absolute;
+    content: '';
+}
+
+.loading__animation:before {
+    width: 5.2em;
+    height: 10.2em;
+    background: #60338e;
+    border-radius: 10.2em 0 0 10.2em;
+    top: -0.1em;
+    left: -0.1em;
+    -webkit-transform-origin: 5.2em 5.1em;
+    transform-origin: 5.2em 5.1em;
+    -webkit-animation: load2 2s infinite ease 1.5s;
+    animation: load2 2s infinite ease 1.5s;
+}
+
+.loading__animation:after {
+    width: 5.2em;
+    height: 10.2em;
+    background: #60338e;
+    border-radius: 0 10.2em 10.2em 0;
+    top: -0.1em;
+    left: 5.1em;
+    -webkit-transform-origin: 0px 5.1em;
+    transform-origin: 0px 5.1em;
+    -webkit-animation: load2 2s infinite ease;
+    animation: load2 2s infinite ease;
+}
+
+@-webkit-keyframes load2 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load2 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+/*fim loading*/
