--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -15,7 +15,7 @@ body {
   }
   margin: 0;
   padding:0;
-  background:#fff;
+  background:#60338e;
 }
 
 ul,
@@ -34,4 +34,8 @@ h4,
 h5,
 h6 {
   font-family: 'Oswald', sans-serif;
+}
+
+img{
+  width: 100%;
 }
