--- a/src/styles/FetchDribbble.scss
+++ b/src/styles/FetchDribbble.scss
@@ -1,37 +1,41 @@
+$purpleColor: #60338e;
+
 .dribbleShot-list {
   margin: 0 auto;
   display: flex;
   flex-flow: row wrap;
-}
 
-.dribbleShot-list__item {
-  text-align: center;
-  padding: 0.5em;
-  background: #fff;
-  margin: 0 auto 1em;
-  cursor: pointer;
-}
+  .dribbleShot-list__item {
+    text-align: center;
+    padding: 0.5em;
+    background: #fff;
+    margin: 0 auto 1em;
+    cursor: pointer;
+  }
 
-.dribbleShot-list__item--small {
-  width: 49%;
-}
+  .dribbleShot-list__item--small {
+    width: 49%;
+  }
 
-.dribbleShot-list__item--large {
-  width: 100%;
-}
+  .dribbleShot-list__item--large {
+    width: 100%;
+  }
 
-.dribbleShot-list__image {
-  display: block;
-  width: 100%;
-}
+  .dribbleShot-list__image {
+    display: block;
+    width: 100%;
+  }
 
-.dribbleShot-list__txt {
-  font-size: 1.2em;
-  color: #60338e;
-  margin: 0.3em 0;
+  .dribbleShot-list__txt {
+    font-size: 1.2em;
+    color: $purpleColor;
+    margin: 0.3em 0;
+  }
 }
-
 @media only screen and (min-width: 60em) {
+
+.dribbleShot-list{
+  
   .dribbleShot-list__item--small {
     width: 24.5%;
   }
@@ -39,4 +43,7 @@
   .dribbleShot-list__item--large {
     width: 32.5%;
   }
+}
+
+
 }
